@@ -93,8 +93,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2011-2021 Michal Josef Špaček
-     BSD 2-Clause License
+    © 2011-2021 Michal Josef Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.11
